Fixed Overflow on X-Axis

--- a/pixxatime/pizzatime.css
+++ b/pixxatime/pizzatime.css
@@ -1,5 +1,6 @@
 body {
   background: rgb(250, 250, 250);
+  overflow-x: hidden;
 }
 
 #mainNavbar {
